--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 ></textarea>
             </div>
         </div>
+        <script src="./js/sweetalert2.js"></script>
         <script src="./js/jquery.min.js"></script>
         <script src="./js/crypto-js.min.js"></script>
         <script src="./js/steganography.min.js"></script>
