add read file .txt, .docx

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <input type="text" id="encrypt-key" />
 
                 <label for="mes-encrypt">Message</label>
+                <input id="mes-file" type="file" accept=".txt,.docx" />
                 <textarea id="mes-encrypt" cols="30" rows="8"></textarea>
 
                 <!-- <button
@@ -119,6 +120,9 @@
         <script src="./js/jquery.min.js"></script>
         <script src="./js/crypto-js.min.js"></script>
         <script src="./js/steganography.min.js"></script>
+        <script src="./js/docxtemplater.min.js"></script>
+        <script src="./js/pizzip.js"></script>
+        <script src="./js/pizzip-utils.js"></script>
         <script src="./js/script.js"></script>
     </body>
 </html>
