--- a/index.html
+++ b/index.html
@@ -108,12 +108,7 @@
                 </button>
                 <br />
                 <label for="mes-decrypted">Decrypted Message</label>
-                <textarea
-                    readonly
-                    id="mes-decrypted"
-                    cols="30"
-                    rows="8"
-                ></textarea>
+                <textarea id="mes-decrypted" cols="30" rows="8"></textarea>
             </div>
         </div>
         <script src="./js/sweetalert2.js"></script>
